# GreatKart

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  ecommerce_flow.puml  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_account_id.py  0003_account_is_vendor.py
api/: permissions.py  serializers.py  urls.py  views.py
carts/: admin.py  context_processors.py  models.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_cartitem_variations.py  0003_auto_20210619_1554.py  0004_auto_20230829_1706.py
category/: admin.py  models.py
category/migrations/: 0001_initial.py  0002_alter_category_id.py
greatkart/: .env.example  note.txt  settings.py  urls.py  views.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_orderproduct_vendor.py  0003_alter_orderproduct_vendor.py  0004_auto_20230808_1426.py  0005_auto_20230809_2114.py  0006_order_shipping_address.py  0007_auto_20230820_2127.py  0008_auto_20230826_2238.py  0009_auto_20230829_1706.py  0010_alter_order_tax.py  0011_alter_order_tax.py  0012_alter_orderproduct_order.py  0015_auto_20230905_2059.py  (+3 more)
store/: admin.py  forms.py  models.py  urls.py  views.py
templates/: base.html  cart.html  dashboard.html  home.html  index.html  place-order.html  product-detail.html  register.html  search-result.html  signin.html  store.html
utils/: order.py  payment.py  vnpay.py
vendors/: admin.py  decorators.py  forms.py  models.py  tables.py  urls.py
(+54 files in other folders)
